# board-of-directors

./: .gitignore  Cargo.toml  README.md
src/: agents.rs  backend.rs  bugfix.rs  bugfix_log.rs  bugfix_session.rs  claude_cli.rs  clear.rs  config.rs  consolidate.rs  copilot_cli.rs  files.rs  gemini_cli.rs  git.rs  init.rs  main.rs  paths.rs  personalities.rs  review.rs  rollback.rs  web.rs
ui/: app.tsx  index.html
